crates/jolt_java_syntax/tests/snapshots/corpus__syntax__recovery__recovered_declaration_names_and_modifiers.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
record sealed(int value) {}

class RecoveredModifiers {
    transient void method() {}
}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    RecordDeclaration
      Identifier "record" @ 0..6 trailing=[Whitespace " "]
      ErrorNode
        Identifier "sealed" @ 7..13
      LParen "(" @ 13..14
      RecordComponentList
        RecordComponent
          ParameterModifierList
          PrimitiveType
            AnnotationList
            IntKw "int" @ 14..17 trailing=[Whitespace " "]
          AnnotationList
          Identifier "value" @ 18..23
      RParen ")" @ 23..24 trailing=[Whitespace " "]
      RecordBody
        LBrace "{" @ 25..26
        RecordBodyMemberList
        RBrace "}" @ 26..27
    ClassDeclaration
      ClassKw "class" @ 29..34 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      Identifier "RecoveredModifiers" @ 35..53 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 54..55
        ClassBodyMemberList
          ClassBodyDeclaration
            MethodDeclaration
              ModifierList
                ErrorNode
                  TransientKw "transient" @ 60..69 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
              VoidType
                VoidKw "void" @ 70..74 trailing=[Whitespace " "]
              Identifier "method" @ 75..81
              LParen "(" @ 81..82
              RParen ")" @ 82..83 trailing=[Whitespace " "]
              Block
                LBrace "{" @ 84..85
                BlockStatementList
                RBrace "}" @ 85..86
        RBrace "}" @ 87..88 leading=[Newline "\n"]
  Eof "" @ 89..89 leading=[Newline "\n"]

diagnostics:
  code=java.parse.restricted_type_identifier severity=Error stage=Parser range=7..13 message="expected type name"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=60..69 message="invalid method modifier"

diagnostics:
code=java.parse.restricted_type_identifier severity=Error stage=Parser range=Some(TextRange { start: TextSize(7), end: TextSize(13) }) message=expected type name
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(60), end: TextSize(69) }) message=invalid method modifier
