crates/jolt_java_syntax/tests/snapshots/corpus__syntax__recovery__recovery_boundary_spacing.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
public class LruCache<.K,V>
class Registry<T : Any>
class Fields {
  int .value;
  private final Map<K,..Node<K,V>> nodes=new HashMap<>();
  private final Map<K,+Node<K,V>> alternateNodes=new HashMap<>();
}

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ModifierList
        PublicKw "public" @ 0..6 trailing=[Whitespace " "]
      ClassKw "class" @ 7..12 trailing=[Whitespace " "]
      Identifier "LruCache" @ 13..21
      TypeParameterList
        Lt "<" @ 21..22
        TypeParameterSeparatedList
          TypeParameter
            AnnotationList
            Dot "." @ 22..23
            Identifier "K" @ 23..24
          Comma "," @ 24..25
          TypeParameter
            AnnotationList
            Identifier "V" @ 25..26
        Gt ">" @ 26..27
      ClassBody
        ClassBodyMemberList
    ClassDeclaration
      ClassKw "class" @ 28..33 leading=[Newline "\n"] trailing=[Whitespace " "]
      Identifier "Registry" @ 34..42
      TypeParameterList
        Lt "<" @ 42..43
        TypeParameterSeparatedList
          TypeParameter
            AnnotationList
            Identifier "T" @ 43..44 trailing=[Whitespace " "]
      ClassBody
        ClassBodyMemberList
    BogusCompilationUnitItem
      Colon ":" @ 45..46 trailing=[Whitespace " "]
      Identifier "Any" @ 47..50
      Gt ">" @ 50..51
    ClassDeclaration
      ClassKw "class" @ 52..57 leading=[Newline "\n"] trailing=[Whitespace " "]
      Identifier "Fields" @ 58..64 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 65..66
        ClassBodyMemberList
          FieldDeclaration
            PrimitiveType
              AnnotationList
              IntKw "int" @ 69..72 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Dot "." @ 73..74
                Identifier "value" @ 74..79
            Semicolon ";" @ 79..80
          FieldDeclaration
            ModifierList
              PrivateKw "private" @ 83..90 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
              FinalKw "final" @ 91..96 trailing=[Whitespace " "]
            ClassType
              ClassTypeSegmentList
                ClassTypeSegmentNode
                  AnnotationList
                  Name
                    Identifier "Map" @ 97..100
                  TypeArgumentList
                    Lt "<" @ 100..101
                    TypeArgumentSeparatedList
                      TypeArgument
                        AnnotationList
                        ClassType
                          ClassTypeSegmentList
                            ClassTypeSegmentNode
                              AnnotationList
                              Name
                                Identifier "K" @ 101..102
                      Comma "," @ 102..103
                      TypeArgument
                        AnnotationList
                        BogusType
                          Dot "." @ 103..104
                          Dot "." @ 104..105
                          ClassType
                            ClassTypeSegmentList
                              ClassTypeSegmentNode
                                AnnotationList
                                Name
                                  Identifier "Node" @ 105..109
                                TypeArgumentList
                                  Lt "<" @ 109..110
                                  TypeArgumentSeparatedList
                                    TypeArgument
                                      AnnotationList
                                      ClassType
                                        ClassTypeSegmentList
                                          ClassTypeSegmentNode
                                            AnnotationList
                                            Name
                                              Identifier "K" @ 110..111
                                    Comma "," @ 111..112
                                    TypeArgument
                                      AnnotationList
                                      ClassType
                                        ClassTypeSegmentList
                                          ClassTypeSegmentNode
                                            AnnotationList
                                            Name
                                              Identifier "V" @ 112..113
                                  Gt ">" @ 113..114
                    Gt ">" @ 114..115 trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "nodes" @ 116..121
                Assign "=" @ 121..122
                VariableInitializer
                  ObjectCreationExpression
                    NewKw "new" @ 122..125 trailing=[Whitespace " "]
                    ClassType
                      ClassTypeSegmentList
                        ClassTypeSegmentNode
                          AnnotationList
                          Name
                            Identifier "HashMap" @ 126..133
                          TypeArgumentList
                            Lt "<" @ 133..134
                            TypeArgumentSeparatedList
                            Gt ">" @ 134..135
                    ArgumentList
                      LParen "(" @ 135..136
                      ExpressionList
                      RParen ")" @ 136..137
            Semicolon ";" @ 137..138
          FieldDeclaration
            ModifierList
              PrivateKw "private" @ 141..148 leading=[Newline "\n", Whitespace "  "] trailing=[Whitespace " "]
              FinalKw "final" @ 149..154 trailing=[Whitespace " "]
            ClassType
              ClassTypeSegmentList
                ClassTypeSegmentNode
                  AnnotationList
                  Name
                    Identifier "Map" @ 155..158
                  TypeArgumentList
                    Lt "<" @ 158..159
                    TypeArgumentSeparatedList
                      TypeArgument
                        AnnotationList
                        ClassType
                          ClassTypeSegmentList
                            ClassTypeSegmentNode
                              AnnotationList
                              Name
                                Identifier "K" @ 159..160
                      Comma "," @ 160..161
                      TypeArgument
                        AnnotationList
                        BogusType
                          Plus "+" @ 161..162
                          ClassType
                            ClassTypeSegmentList
                              ClassTypeSegmentNode
                                AnnotationList
                                Name
                                  Identifier "Node" @ 162..166
                                TypeArgumentList
                                  Lt "<" @ 166..167
                                  TypeArgumentSeparatedList
                                    TypeArgument
                                      AnnotationList
                                      ClassType
                                        ClassTypeSegmentList
                                          ClassTypeSegmentNode
                                            AnnotationList
                                            Name
                                              Identifier "K" @ 167..168
                                    Comma "," @ 168..169
                                    TypeArgument
                                      AnnotationList
                                      ClassType
                                        ClassTypeSegmentList
                                          ClassTypeSegmentNode
                                            AnnotationList
                                            Name
                                              Identifier "V" @ 169..170
                                  Gt ">" @ 170..171
                    Gt ">" @ 171..172 trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "alternateNodes" @ 173..187
                Assign "=" @ 187..188
                VariableInitializer
                  ObjectCreationExpression
                    NewKw "new" @ 188..191 trailing=[Whitespace " "]
                    ClassType
                      ClassTypeSegmentList
                        ClassTypeSegmentNode
                          AnnotationList
                          Name
                            Identifier "HashMap" @ 192..199
                          TypeArgumentList
                            Lt "<" @ 199..200
                            TypeArgumentSeparatedList
                            Gt ">" @ 200..201
                    ArgumentList
                      LParen "(" @ 201..202
                      ExpressionList
                      RParen ")" @ 202..203
            Semicolon ";" @ 203..204
        RBrace "}" @ 205..206 leading=[Newline "\n"]
  Eof "" @ 207..207 leading=[Newline "\n"]

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=22..23 message="expected type parameter name"
  code=java.parse.expected_syntax severity=Error stage=Parser range=28..33 message="expected type body"
  code=java.parse.expected_syntax severity=Error stage=Parser range=45..46 message="expected `>` after type parameters"
  code=java.parse.expected_syntax severity=Error stage=Parser range=45..46 message="expected type body"
  code=java.parse.unexpected_syntax severity=Error stage=Parser range=45..46 message="unexpected token at top level"
  code=java.parse.expected_syntax severity=Error stage=Parser range=73..74 message="expected variable name"
  code=java.parse.expected_syntax severity=Error stage=Parser range=103..104 message="expected type"
  code=java.parse.expected_syntax severity=Error stage=Parser range=161..162 message="expected type"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(22), end: TextSize(23) }) message=expected type parameter name
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(28), end: TextSize(33) }) message=expected type body
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(45), end: TextSize(46) }) message=expected `>` after type parameters
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(45), end: TextSize(46) }) message=expected type body
code=java.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(45), end: TextSize(46) }) message=unexpected token at top level
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(73), end: TextSize(74) }) message=expected variable name
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(103), end: TextSize(104) }) message=expected type
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(161), end: TextSize(162) }) message=expected type
