crates/jolt_java_syntax/tests/snapshots/corpus__syntax__recovery__switch_rule_empty_body.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class C { void m(int value) { switch (value) { case 1 -> /* empty */ ; } } }

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Identifier "C" @ 6..7 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 8..9 trailing=[Whitespace " "]
        ClassBodyMemberList
          MethodDeclaration
            VoidType
              VoidKw "void" @ 10..14 trailing=[Whitespace " "]
            Identifier "m" @ 15..16
            LParen "(" @ 16..17
            FormalParameterList
              FormalParameter
                ParameterModifierList
                PrimitiveType
                  AnnotationList
                  IntKw "int" @ 17..20 trailing=[Whitespace " "]
                AnnotationList
                Identifier "value" @ 21..26
            RParen ")" @ 26..27 trailing=[Whitespace " "]
            Block
              LBrace "{" @ 28..29 trailing=[Whitespace " "]
              BlockStatementList
                BlockStatement
                  SwitchStatement
                    SwitchKw "switch" @ 30..36 trailing=[Whitespace " "]
                    LParen "(" @ 37..38
                    NameExpression
                      Identifier "value" @ 38..43
                    RParen ")" @ 43..44 trailing=[Whitespace " "]
                    SwitchBlock
                      LBrace "{" @ 45..46 trailing=[Whitespace " "]
                      SwitchEntryList
                        SwitchRule
                          SwitchLabel
                            CaseKw "case" @ 47..51 trailing=[Whitespace " "]
                            SwitchLabelItemList
                              CaseConstant
                                LiteralExpression
                                  IntegerLiteral "1" @ 52..53 trailing=[Whitespace " "]
                          Arrow "->" @ 54..56 trailing=[Whitespace " ", BlockComment "/* empty */", Whitespace " "]
                          BogusExpression
                          Semicolon ";" @ 69..70 trailing=[Whitespace " "]
                      RBrace "}" @ 71..72 trailing=[Whitespace " "]
              RBrace "}" @ 73..74 trailing=[Whitespace " "]
        RBrace "}" @ 75..76
  Eof "" @ 77..77 leading=[Newline "\n"]

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=69..70 message="expected expression"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(69), end: TextSize(70) }) message=expected expression
