crates/jolt_java_syntax/tests/snapshots/corpus__syntax__recovery__switch_statement_group.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
class C { void m(int value) { switch (value) { case 1: /* group */ + ; use(); } } }

syntax:
syntax:
CompilationUnit
  ClassDeclaration
    ClassKw "class" @ 0..5 trailing=[Whitespace " "]
    Identifier "C" @ 6..7 trailing=[Whitespace " "]
    ClassBody
      LBrace "{" @ 8..9 trailing=[Whitespace " "]
      ClassBodyDeclaration
        MethodDeclaration
          VoidType
            VoidKw "void" @ 10..14 trailing=[Whitespace " "]
          Identifier "m" @ 15..16
          LParen "(" @ 16..17
          FormalParameterList
            FormalParameter
              PrimitiveType
                IntKw "int" @ 17..20 trailing=[Whitespace " "]
              Identifier "value" @ 21..26
          RParen ")" @ 26..27 trailing=[Whitespace " "]
          Block
            LBrace "{" @ 28..29 trailing=[Whitespace " "]
            BlockStatement
              SwitchStatement
                SwitchKw "switch" @ 30..36 trailing=[Whitespace " "]
                LParen "(" @ 37..38
                NameExpression
                  Identifier "value" @ 38..43
                RParen ")" @ 43..44 trailing=[Whitespace " "]
                SwitchBlock
                  LBrace "{" @ 45..46 trailing=[Whitespace " "]
                  SwitchBlockStatementGroup
                    SwitchLabel
                      CaseKw "case" @ 47..51 trailing=[Whitespace " "]
                      CaseConstant
                        LiteralExpression
                          IntegerLiteral "1" @ 52..53
                    Colon ":" @ 53..54 trailing=[Whitespace " ", BlockComment "/* group */", Whitespace " "]
                    BlockStatement
                      ExpressionStatement
                        ErrorNode
                          UnaryExpression
                            Plus "+" @ 67..68 trailing=[Whitespace " "]
                            ErrorNode
                              Semicolon ";" @ 69..70 trailing=[Whitespace " "]
                        ErrorNode
                          Identifier "use" @ 71..74
                        ErrorNode
                          LParen "(" @ 74..75
                        ErrorNode
                          RParen ")" @ 75..76
                        Semicolon ";" @ 76..77 trailing=[Whitespace " "]
                  RBrace "}" @ 78..79 trailing=[Whitespace " "]
            RBrace "}" @ 80..81 trailing=[Whitespace " "]
      RBrace "}" @ 82..83
  Eof "" @ 84..84 leading=[Newline "\n"]

diagnostics:
  code=java.parse.expected_syntax severity=Error stage=Parser range=69..70 message="expected expression"
  code=java.parse.invalid_statement_expression severity=Error stage=Parser range=71..74 message="expected statement expression"
  code=java.parse.invalid_statement_expression severity=Error stage=Parser range=71..74 message="unexpected token in statement expression"
  code=java.parse.invalid_statement_expression severity=Error stage=Parser range=74..75 message="unexpected token in statement expression"
  code=java.parse.invalid_statement_expression severity=Error stage=Parser range=75..76 message="unexpected token in statement expression"

diagnostics:
code=java.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(69), end: TextSize(70) }) message=expected expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(71), end: TextSize(74) }) message=expected statement expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(71), end: TextSize(74) }) message=unexpected token in statement expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(74), end: TextSize(75) }) message=unexpected token in statement expression
code=java.parse.invalid_statement_expression severity=Error stage=Parser range=Some(TextRange { start: TextSize(75), end: TextSize(76) }) message=unexpected token in statement expression
